src/sass/components/_tab-container.scss
.tab {
    display: flex;
    justify-content: space-between;
    padding: 0px 15px 0px 15px;
    align-items: center;
    height: 100%;

    color: white;
    background-color: $tabs-color;

    border-right: 1px solid $primary-variant;

    span {
        margin-right: 10px;
    }

    i {
        font-size: 10px;
        &:hover {
            color: white;
            transform: scale(1.3);
        }
    }

    @extend %selection;
    @extend %noselect;
}

